syntax = "proto3";

package io.vg.srv.discount;

import 'common.proto';
import 'google/protobuf/any.proto';
import "google/protobuf/timestamp.proto";
import 'google/protobuf/wrappers.proto';
import 'google/protobuf/struct.proto';

enum DiscountType {
  All = 0;
  Category =1; 
  Product =2 ;
  Manufacturer = 3;
}
enum DiscountLimitation {
  Unlimited = 0; 
  NTimes = 1; 
  NTimesPerUser = 2;
}

enum DiscountPriority {
  Low = 0; 
  Medium = 1;  
  High = 2;
}

enum DiscountStatus {
  Active = 0;
  Locked = 1;
  Deleted = 2;
}

message Discount {
  // default field
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  google.protobuf.Timestamp deletedAt = 4;
  google.protobuf.StringValue createdBy = 5;
  google.protobuf.StringValue updatedBy = 6;
  google.protobuf.StringValue deletedBy = 7;

  // reserved field 
  string name = 8;
  string description = 9;
  bool requireCouponCode = 10;
  string couponCode = 11;
  google.protobuf.Timestamp startAt = 12;
  google.protobuf.Timestamp endAt = 13;
  DiscountType discountType = 14;
  float discountAmount = 15;
  bool usePercentage = 16;
  float discountPercentage = 17;
  float maximumDiscountAmount = 18;
  bool isCumulative = 19;
  DiscountLimitation discountLimitation = 20;
  int32 limitationTimes = 21;
  string discountRequirementId = 22;
  DiscountPriority priority = 23;
  DiscountStatus status = 24;
}

message Discounts {
  repeated Discount discounts = 1;
}

message DiscountEdge {
  Discounts node = 1;
  string cursor = 2;
}

message DiscountConnection {
  common.PageInfo pageInfo = 1;
  int32 totalCount = 2;
  repeated DiscountEdge edges = 3;
}

message DiscountInput {
  string name = 1;
  string description = 2;
  bool requireCouponCode = 3;
  string couponCode = 4;
  google.protobuf.Timestamp startAt = 5;
  google.protobuf.Timestamp endAt = 6;
  DiscountType discountType = 7;
  float discountAmount = 8;
  bool usePercentage = 9;
  float discountPercentage = 10;
  float maximumDiscountAmount = 11;
  bool isCumulative = 12;
  DiscountLimitation discountLimitation = 13;
  int32 limitationTimes = 14;
  string discountRequirementId = 15;
  DiscountPriority priority = 16;
  DiscountStatus status = 17;
}

message CreateDiscountInput {
  DiscountInput data = 1;
}

message CreateManyDiscountsInput {
  repeated DiscountInput discounts = 1;
}

message UpdateDiscountInput {
  string id = 1;
  DiscountInput data = 2;
}

message UpdateManyDiscountsInput {
  google.protobuf.Any filter = 1;
  DiscountInput update = 2;
}

message DeleteManyDiscountsInput {
  google.protobuf.Any filter = 1;
}

message NullableDiscount {
  oneof kind {
    google.protobuf.NullValue null = 1;
    Discount data = 2;
  }
}